fix: adding thread status in the patch api #34
