# server/ap_server/models.py
@@ -224,31 +224,6 @@ class RunCreateStateless(BaseModel):
     )
 
 
-class Status1(Enum):
-    idle = "idle"
-    busy = "busy"
-    interrupted = "interrupted"
-    error = "error"
-
-
-class ThreadSearchRequest(BaseModel):
-    metadata: Optional[Dict[str, Any]] = Field(
-        None, description="Thread metadata to filter on.", title="Metadata"
-    )
-    values: Optional[Dict[str, Any]] = Field(
-        None, description="State values to filter on.", title="Values"
-    )
-    status: Optional[Status1] = Field(
-        None, description="Thread status to filter on.", title="Status"
-    )
-    limit: Optional[conint(ge=1, le=1000)] = Field(
-        10, description="Maximum number to return.", title="Limit"
-    )
-    offset: Optional[conint(ge=0)] = Field(
-        0, description="Offset to start from.", title="Offset"
-    )
-
-
 class ThreadCheckpoint(BaseModel):
     model_config = ConfigDict(
         extra="allow",
@@ -277,6 +252,13 @@ class ThreadCreate(BaseModel):
         description="How to handle duplicate creation. Must be either 'raise' (raise error if duplicate), or 'do_nothing' (return existing thread).",
         title="If Exists",
     )
+
+
+class ThreadStatus(Enum):
+    idle = "idle"
+    busy = "busy"
+    interrupted = "interrupted"
+    error = "error"
 
 
 class StorePutRequest(BaseModel):
@@ -449,6 +431,24 @@ class Namespace(RootModel[List[str]]):
     root: List[str]
 
 
+class ThreadSearchRequest(BaseModel):
+    metadata: Optional[Dict[str, Any]] = Field(
+        None, description="Thread metadata to filter on.", title="Metadata"
+    )
+    values: Optional[Dict[str, Any]] = Field(
+        None, description="State values to filter on.", title="Values"
+    )
+    status: Optional[ThreadStatus] = Field(
+        None, description="Thread status to filter on."
+    )
+    limit: Optional[conint(ge=1, le=1000)] = Field(
+        10, description="Maximum number to return.", title="Limit"
+    )
+    offset: Optional[conint(ge=0)] = Field(
+        0, description="Offset to start from.", title="Offset"
+    )
+
+
 class Thread(BaseModel):
     thread_id: UUID = Field(..., description="The ID of the thread.", title="Thread Id")
     created_at: AwareDatetime = Field(
@@ -460,9 +460,7 @@ class Thread(BaseModel):
     metadata: Dict[str, Any] = Field(
         ..., description="The thread metadata.", title="Metadata"
     )
-    status: Status1 = Field(
-        ..., description="The status of the thread.", title="Status"
-    )
+    status: ThreadStatus
     values: Optional[Dict[str, Any]] = Field(
         None, description="The current state of the thread.", title="Values"
     )
@@ -491,6 +489,7 @@ class ThreadState(BaseModel):
 
 
 class ThreadPatch(BaseModel):
+    status: Optional[ThreadStatus] = None
     checkpoint: Optional[ThreadCheckpoint] = Field(
         None,
         description="The identifier of the checkpoint to branch from. Ignored for metadata-only patches. If not provided, defaults to the latest checkpoint.",
